@@ -1,3 +1,7 @@
+2008-11-16  David Teller  <David.Teller@univ-orleans.fr>
+
+	* src/core/extlib/extArray.ml*: [Cap.Labels] added
+
 2008-11-15  David Teller  <David.Teller@univ-orleans.fr>
 
 	* Makefile.in: [reinstall] now builds [top], [syntax]
